Revert 'show Login button with delay'

--- a/WebSite/Pages/Index.cshtml
+++ b/WebSite/Pages/Index.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Login</title>
 </head>
-<body onload="addButtons()">
+<body>
     <div align="center">
         <div style="width: 500px; height: 270px; border: double">
             <div class="register link btn btn-link" onclick="Register()">Register</div>
@@ -28,7 +28,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" align="right" style="width: 100px" id="buttons">
-                        @*<button type="button" class="btn btn-sm btn-success" onclick="Login()" title="Login" id="loginBtn">Login</button>*@
+                        <button type="button" class="btn btn-sm btn-success" onclick="Login()" title="Login" id="loginBtn">Login</button>
                         <button type="button" class="btn btn-sm btn-warning remind" onclick="RemindPassword()" title="remind" id="remindBtn">Remind password</button>
                     </td>
                 </tr>
